--- a/Pages/Shop.cshtml
+++ b/Pages/Shop.cshtml
@@ -24,6 +24,14 @@
             <td>@i.Quantity</td>
             <td>@i.Books.Price.ToString("c")</td>
             <td>@((i.Quantity * i.Books.Price ).ToString("c"))</td>
+
+            <td class="text-center">
+                <form method="post" asp-page-handler="Remove">
+                    <input type="hidden" name="bookId" value="@i.Books.BookId" />
+                    <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
+                    <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+                </form>
+            </td>
         </tr>
         }
         //
@@ -40,4 +48,6 @@
 
 <div>
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
+    <a class="btn btn-primary"asp-controller="Order" asp-action="Checkout" >Checkout</a>
 </div>
+
