--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -1,9 +1,49 @@
 ﻿<!--its using razor code to let the website know where the razor page is located-->
 @page "/admin/books" 
 @page "/admin"
+@inherits OwningComponentBase<IBookStoreRepository>
 
-<h3>Books</h3>
+<table class="table table-sm table-striped table-bordered">
+
+    <thead>
+        <tr>
+            <th>Book ID</th>
+            <th>Book Title</th>
+            <th>Book Category</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @if (BookData?.Count() > 0)
+        {
+            //List the Books
+        }
+        else
+            {
+                <tr>
+                    <td colspan="5" class="text-center">No Books</td>
+                </tr>
+
+            }
+
+    </tbody>
+
+</table>
 
 @code {
+
+    public IBookStoreRepository repo => Service;
+    public IEnumerable<Books> BookData { get; set; }
+
+    protected async override Task OnInitializedAsync()
+    {
+        await UpdateData();
+    }
+
+    public async Task UpdateData()
+    {
+        BookData = await repo.Books.ToListAsync();
+    }
+
 
 }
