--- a/Pages/Admin/Books.razor
+++ b/Pages/Admin/Books.razor
@@ -1,7 +1,10 @@
 ﻿<!--its using razor code to let the website know where the razor page is located-->
-@page "/admin/books" 
+@page "/admin/books"
 @page "/admin"
 @inherits OwningComponentBase<IBookStoreRepository>
+
+
+
 
 <table class="table table-sm table-striped table-bordered">
 
@@ -16,24 +19,47 @@
 
         @if (BookData?.Count() > 0)
         {
-            //List the Books
+            @foreach (Models.Books b in BookData)
+
+            {
+        <tr>
+            <td>@b.BookId</td>
+            <td>@b.Title</td>
+            <td>@b.Category</td>
+
+
+            <td>
+                <NavLink class="btn btn-info btn-sm" href="@GetDetailsUrl(b.BookId)">Details</NavLink>
+            </td>
+
+            <td>
+                <NavLink class="btn btn-warning btn-sm" href="@GetEditUrl(b.BookId)">Edit</NavLink>
+            </td>
+            <!--I use badge for my second incoporation of bootstrap Badges are numerical indicators of how many items are associated with a link:-->
+            <td>
+                <button class="btn btn-danger btn-sm badge" @onclick="@(x => RemoveBook(b))">Delete</button>
+            </td>
+        </tr>
+            }
         }
         else
-            {
-                <tr>
-                    <td colspan="5" class="text-center">No Books</td>
-                </tr>
+        {
+            <tr>
+                <td colspan="5" class="text-center">No Books</td>
+            </tr>
 
-            }
+        }
 
     </tbody>
 
 </table>
 
+<NavLink class="btn btn-primary" href="/admin/books/create">Create</NavLink>
+
 @code {
 
     public IBookStoreRepository repo => Service;
-    public IEnumerable<Books> BookData { get; set; }
+    public IEnumerable<Models.Books> BookData { get; set; }
 
     protected async override Task OnInitializedAsync()
     {
@@ -43,6 +69,15 @@
     public async Task UpdateData()
     {
         BookData = await repo.Books.ToListAsync();
+    }
+
+    public string GetDetailsUrl(long id) => $"/admin/books/details/{id}";
+    public string GetEditUrl(long id) => $"/admin/books/edit/{id}";
+
+    public async Task RemoveBook (Models.Books b)
+    {
+        repo.DeleteBook(b);
+        await UpdateData();
     }
 
 
