--- a/Pages/Admin/AdminLayout.razor
+++ b/Pages/Admin/AdminLayout.razor
@@ -1,8 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
+<!--Second Bootstrap that I use is to underline in blue text when I type in my admin-->
+<div class="bg-info text-white p-2 text-decoration-underline">
+  
+    <div class="container-fluid">
 
-<div class="bg-info text-white p-2">
-    <span class="navbar-brand m-lg-2">Bookstore Administration</span>
+        <div class="row">
+
+            <div class="col">
+                <span class="navbar-brand m-lg-2"></span>
+            </div>
+
+            <div class="col-2 text-right">
+                <!--For one of the bootstrap ideas I use a btn-outline-light for the logout button to be outline to white -->
+                <a class="btn btn-sm btn-primary btn-outline-light" href="/account/logout">Log Out</a>
+            </div>
+
+        </div>
+
+    </div>
+
 </div>
 
 <div class="container-fluid">
